# web_scraper_voice_agent

./: .gitignore  README.md  chat_test.html  docker-compose.yml  main.py  nginx-dev.conf  nginx-https.conf  pyproject.toml  test_scraper.py  test_simple_url.py
backend/: .dockerignore  Dockerfile  data.json  entrypoint.sh  fix.py  main.py  pyproject.toml
backend/configs/: config.py  constants.py
backend/dtos/: prompts.py  voice.py  voice_agent.py
backend/helpers/: ai_processor.py  bridge.py  chat_ai.py  prompts.py  scrape.py  url_utils.py  ws_init.py
backend/repositories/: clients_repository.py
backend/routes/: clients.py  elevenlabs.py  prompts.py  websocket.py
backend/services/: clients_service.py  elevenlabs_service.py  prompts_service.py  websocket_manager.py
configs/: config.py  constants.py
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  server.mjs  vite.config.js
frontend/css/: styles.css
frontend/js/: agent.js
frontend/src/: App.jsx  index.css
frontend/src/components/ClientCard/: ClientCard.css  ClientCard.jsx
frontend/src/components/ClientForm/: ClientForm.css  ClientForm.jsx
frontend/src/pages/ClientPage/: ClientPage.css  ClientPage.jsx
frontend/src/pages/Home/: Home.css  Home.jsx
frontend/src/pages/PromptEditor/: PromptEditor.css  PromptEditor.jsx
helpers/: ai_processor.py  chat_ai.py  scrape.py  usage.py
